--- a/recyclens_web/admin-login.html
+++ b/recyclens_web/admin-login.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <img src="logo.png" alt="RecycLens Logo" class="logo" />
+        <h1>Welcome to RecycLens</h1>
         <h1>Admin Login</h1>
         <form action="#" method="POST">
           <input type="text" placeholder="Username" required /><br/><br/>
