--- a/recyclens_web/admin-dashboard.html
+++ b/recyclens_web/admin-dashboard.html
@@ -148,6 +148,10 @@
         <h3>🏢 Centers Registered</h3>
         <p>15 centers</p>
       </div>
+      <div class="stat-item">
+        <h3>📨 Messages</h3>
+        <p>5 new</p>
+      </div>
     </div>
 
     <!-- Community Interaction -->
